UCDetector 1.6.0 from 2010-??-??:
Bugfixes:
 - fixed missing QuickFix icons
 

New features:
 - [ 2810803 ] Added again: Combobox to change all visibility combos
 
// -----------------------------------------------------------------------------
UCDetector 1.5.0 from 2010-06-10:
Bugfixes:
 - [ 2922801 ] Quick fix exception on enum declaration 
 - [ 2968753 ] protected abstract method cannot be made private
 - [ 2986496 ] Marker don't disappear when deleting a complete line
 - [ 2996487 ] Applying quick fix scrolls page
 - [ 2996965 ] Property 'File name pattern to search': Trim whitespaces
 - [ 2996537 ] Eclipse Plug-in/Extension detection: Added to default file pattern: MANIFEST.MF
 

New features:
 - [ 2929828 ] Added filter to exclude classes extending/implementing
 - [ 2923567 ] Do not report markers for deprecated class members
 - [ 2824564 ] Add detection setting profiles
 - Added cycle detection again, improved cycle view
 - Added new text report
 
// -----------------------------------------------------------------------------
UCDetector 1.4.0 from 2010-01-03:
Bugfixes:
 - [ PerformanceBug ] UCDetector is now 2 times faster, because SearchScope is sources now.
 - [ 2911486 ] QuickFix doesn't modify code
 - [ 2900561] Enum constant detection now also searches for values() and valueOf()

New features:
 - Improved QuickFixes
 - Improved HTML/XML report
 - Added a new TodoQuickFix

// -----------------------------------------------------------------------------
UCDetector 1.3.0 from 2009-10-25:
Bugfixes:
 - [ 2826205 ] Can't make interface methods final
 - [ 2826216 ] Unused interface methods are not detected
 - [ 2804064, 2865051, 2743908 ]
              Access to enclosing type - make 2743908 configurable: Created new Checkbox
 - [ 2864046 ] Ignore public methods of non-public classes
-  [ 2864967 ] Ignore references for recursive methods

New features:
 - New preference: 'ignore Classes containing string'
 - [ 2832790 ] Custom annotation filter
