@@ -1,6 +1,7 @@
 UCDetector 1.6.0 from 2010-??-??:
 Bugfixes:
  - fixed missing QuickFix icons
+ - [ 3025571 ] Exception loading modes: Malformed \uxxxx encoding
  
 
 New features:
